CLDR-14597 Restrict organizations to specified locales; refactoring (#1273)
-Refactoring preliminary to implementation of warning for locales not covered by org

-Move a lot of code from UserRegistry to LocaleNormalizer for encapsulation

-Fix deprecation and other warnings

-Comments